# agent_skills_directory

./: .gitignore  CHANGELOG.md  README.md  aggregation_state.json  bundles.json  catalog.json  catalog.min.json  catalog.min.toon  catalog.toon  install.sh  pyproject.toml  test_patterns.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: add-skill-source.md  config.yml  new-provider.yml  report-issue.md
.github/workflows/: build-standalone.yml  update-catalog.yml  validate-new-provider.yml  validate-skill.yml
cli/: __init__.py  loader.py  skills.py  validate.py
docs/: app.js  bundles.json  catalog.json  catalog.min.json  fix_demo.html  index.html  style.css
docs/exports/: active-skills.json  badge-quality.json  badge-skills.json  claude-skills.json  copilot-skills.json  index.json  mcp-compatible.json  premium-skills.json
exports/: active-skills.json  badge-providers.json  badge-quality.json  badge-skills.json  claude-skills.json  copilot-skills.json  index.json  mcp-compatible.json  premium-skills.json
homebrew-tap/: README.md
homebrew-tap/Formula/: skills.rb  skillsdir.rb
schema/: bundles-schema.json  catalog-schema.json  skill-manifest-schema.json
scripts/: aggregate.py  analyze_repo.py  build_standalone.py  setup_release.sh  test_provider.py
tests/: test_aggregate.py
